<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="40dp"
    android:gravity="center_vertical"
    android:background="@color/color_base"
    android:id="@+id/rl_item_measure_info"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_size_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/size_id"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:textColor="@color/title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_size_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/size_project"
        android:textColor="@color/title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_size_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:textColor="@color/title"
        android:gravity="right"
        android:textSize="16sp"
        android:text="@string/size" />
</RelativeLayout>