<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_base_deep"
    android:orientation="vertical" >

   <include layout="@layout/base_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@color/color_base">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/login_user"
                android:layout_marginLeft="15dp" />
            <EditText
                android:id="@+id/et_forget_pwd_mobile"
                style="@style/et_login_common"
                android:hint="@string/input_mobile"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/register_auth_code"
                android:layout_marginLeft="15dp" />
            <EditText
                android:id="@+id/et_forget_pwd_auth_code"
                style="@style/et_login_common"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/input_auth_code"/>
            <TextView
                android:id="@+id/tv_forget_pwd_send_auth_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_send_auth_code"
                android:textColor="#FF8201"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_auth_code"
                android:layout_marginRight="15dp"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/login_pwd"
                android:layout_marginLeft="15dp" />
            <EditText
                android:id="@+id/et_forget_pwd_password"
                style="@style/et_login_common"
                android:inputType="textPassword"
                android:hint="@string/input_pwd"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_forget_pwd_confirm"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/login_unbtn_round"
        android:text="@string/confirm"
        android:textColor="#FF8201"
        android:textSize="16sp" />
</LinearLayout>