<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_base_deep"
    android:orientation="vertical"
    tools:context="com.example.objLoader.activity.SettingActivity">

    <include layout="@layout/base_title_bar"/>

    <RelativeLayout
        android:id="@+id/rel_about_us"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_base"
        android:layout_marginTop="20dp">
        <TextView
            android:text="@string/about_us"
            style="@style/account_info_tv"
            android:layout_marginLeft="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:background="@color/color_base_deep"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_your_advice"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_base">
        <TextView
            android:text="@string/your_advice"
            style="@style/account_info_tv"
            android:layout_marginLeft="15dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rel_clear_cash"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_base"
        android:layout_marginTop="10dp">
        <TextView
            android:text="@string/your_clear_cash"
            style="@style/account_info_tv"
            android:layout_marginLeft="15dp" />

       <TextView
           android:id="@+id/tv_clear_cash"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="16sp"
           android:textColor="@color/title"
           android:layout_centerVertical="true"
           android:layout_alignParentRight="true"
           android:layout_marginRight="25dp" />
    </RelativeLayout>
</LinearLayout>
