<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_measure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/measure_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#0d548c" >

        <ImageView
            android:id="@+id/iv_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/white_back"
            android:onClick="finish" />

        <TextView
            android:id="@+id/tv_title_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/measure_title"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_measure_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/next_right" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/measure_input_weightorheight"
        android:textColor="#0e538c"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/transparent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/transparent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:text="@string/measure_height"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView1"
                android:background="@null"
                android:text="140"
                android:focusableInTouchMode="false"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#9a9997" >
            </EditText>
        </RelativeLayout>

       <!--  <com.example.objLoader.view.CustomNumberPicker
            android:id="@+id/cnp_height"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_alignParentRight="true" >
        </com.example.objLoader.view.CustomNumberPicker> -->
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/transparent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/transparent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:text="@string/measure_weight"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView2"
                android:background="@null"
                android:focusableInTouchMode="false"
                android:text="45"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#9a9997" />
        </RelativeLayout>

        <!-- <com.example.objLoader.view.CustomNumberPicker
            android:id="@+id/cnp_weight"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_alignParentRight="true" >
        </com.example.objLoader.view.CustomNumberPicker> -->
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/transparent" />

    <!-- <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff" >

        <Button
            android:id="@+id/btn_measure_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text="@string/next"
            android:textColor="#0e538c"
            android:textSize="16sp" />
    </RelativeLayout> -->

</LinearLayout>